Rejoice System Website

--- a/views/demo.html
+++ b/views/demo.html
@@ -59,6 +59,9 @@
                     </div>
                     <div id="like_button_container"></div>
                 </div>
+                <div style="margin-right: '200pt'">
+                    <a type="button" href="/assets/app-debug.apk">Demo React Native</a>
+                </div>
                 <div>
                     <a type="button" href="/signout?id=<%= dataUser._id %>">Signout</a>
                 </div>
